--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "angular2": "2.0.0-beta.0",
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.13",
-    "ionic-framework": "^2.0.0-alpha.47",
+    "ionic-framework": "2.0.0-alpha.47",
+    "parse": "^1.6.14",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "zone.js": "0.5.10"
